WIP: unernehmen page

--- a/unternehmen.html
+++ b/unternehmen.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Für Unternehmen</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Für Unternehmen</h1>
+    <main class="container">
+      <div class="page-wrap">
+        <div class="page-wrap-narrow">
+          <div class="page-header">
+            <h2>Software-Experten gesucht? Hier live und per Video finden.</h2>
+            <img
+              src="./img/328a6b_a4af2e6d59444a61942ac4bc00df6e0b_mv2.webp"
+              alt="job tempo meeting"
+            />
+          </div>
+          <div class="page-div">
+            <iframe
+              width="480px"
+              height="270px"
+              src="https://www.youtube.com/embed/UF8uR6Z6KLc"
+              frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <div class="page-list">
+              <h3>
+                8 Jahre Erfahrungen mit unserem effizienten Recruting-Format
+              </h3>
+              <ul>
+                <li>
+                  bereits Hunderte IT-Stellen haben wir mit JobTempoMeeting
+                  besetzt;
+                </li>
+                <li>jetzt noch zielgerichterer als digitales Event;</li>
+                <li>
+                  Du sprichst in 60 Minuten mit 10 vor-qualifizierten Bewerbern
+                  mit IT-background;
+                </li>
+                <li>und hast sofort alle Profildaten;</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h3 class="page-subtitle">Und so funktioniert es</h3>
+            <div class="page-wrap-list">
+              <div class="page-list-elem">
+                Bewerber melden sich an + tragen Profilkarte ein
+              </div>
+              <div class="page-list-elem">Wir qualifizieren die Bewerber</div>
+              <div class="page-list-elem">
+                Du als Unternehmen nimmst an einem Online-Termin teil
+              </div>
+              <div class="page-list-elem">
+                Bildschirm ist geteilt: Life-Video-Gespräch mit Bewerber /
+                Profilkarte des Bewerbers
+              </div>
+              <div class="page-list-elem">
+                Du bewertest für dich im Gespräch und ergänzt mit Notizen
+              </div>
+              <div class="page-list-elem">
+                Nach dem Call hast du alle Bewerberdaten und lädst ihn ein
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
