--- a/unternehmen.html
+++ b/unternehmen.html
@@ -44,7 +44,7 @@
               </ul>
             </div>
           </div>
-          <div>
+          <div class="page-div">
             <h3 class="page-subtitle">Und so funktioniert es</h3>
             <div class="page-wrap-list">
               <div class="page-list-elem">
@@ -65,6 +65,11 @@
                 Nach dem Call hast du alle Bewerberdaten und lädst ihn ein
               </div>
             </div>
+          </div>
+          <div>
+            <h3 class="page-subtitle">
+              Unsere Kunden .. von groß bis klein .. und mit IT-Bezug
+            </h3>
           </div>
         </div>
       </div>
