add new block to unternehmen page

--- a/unternehmen.html
+++ b/unternehmen.html
@@ -70,6 +70,50 @@
             <h3 class="page-subtitle">
               Unsere Kunden .. von groß bis klein .. und mit IT-Bezug
             </h3>
+            <div class="page-clients-list">
+              <img src="./img/Allianz-Logo.wine.png" alt="allianz" />
+              <img src="./img/1200px-SAP_2011_logo.svg.png" alt="sap" />
+              <img src="./img/1280px-Deutsche_Bahn_AG-Logo.svg.png" alt="db" />
+              <img src="./img/e1cff34e7d8f1332a7864067ae331fbc.jpg" alt="vw" />
+              <img
+                src="./img/mercedes-benz-glc-class-car-mercedes-benz-sprinter-daimler-ag-mercedes-logo-png.jpg"
+                alt="mercedes"
+              />
+            </div>
+          </div>
+          <div>
+            <h3 class="page-subtitle">Eindrücke und Teilnehmer-Meinungen</h3>
+            <div class="page-div">
+              <div class="page-list">
+                <ul>
+                  <li>
+                    Seit 2012 führen wir an 7 Standorten die
+                    IT-Recruiting-Events “JobTempomeeting” sehr erfolgreich
+                    durch;
+                  </li>
+                  <li>
+                    du kannst dich jetzt für unsere noch effizenteren digitalen
+                    Events anmelden;
+                  </li>
+                  <li>
+                    diesen finden sehr bequem an deinem Computer statt;
+                  </li>
+                </ul>
+              </div>
+              <iframe
+                width="480px"
+                height="270px"
+                src="https://www.youtube.com/embed/UF8uR6Z6KLc"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+          <div>
+            <h3 class="page-subtitle">
+              Jetzt anmelden und 10% Rabatt auf deine erste Teilnahme bekommen
+            </h3>
           </div>
         </div>
       </div>
